public interface Emprestimo {
    String emprestar();
}