class Permitido implements Emprestimo {

    @Override
    public String emprestar() {
        return "Permitido";
    }
}