class Proibido implements Emprestimo {

    @Override
    public String emprestar() {
        return "Proibido";
    }
}